swim_common/src/form/tests/derive/tag/not_enum.stderr
error: Tags can only be derived for enumerations
  --> $DIR/not_enum.rs:19:5
   |
19 |     struct S {
   |     ^^^^^^
